<resources>
    <string name="app_name">Foodify</string>
    <string name="foodify_credits">Embedded Systems Programming<b>\nALAsoft\n\n</b><b>Cigagna Alessio,\nLerose Leonardo,\nMoretto Alberto.\n</b>\n<i>All rights reserved © 2017.</i></string>
    <string name="starting_bill_dollars">0,00$</string>
    <string name="starting_bill_euros">0,00€</string>
    <string name="payment_success_label">Payment done successfully!</string>
    <string name="payment_failed_label">You don"'"t have enough money, tap on your account to add money</string>
    <string name="add_money">add money to your account!</string>
    <string name="bill_label">Your Order:</string>
    <string name="bill_total_order_label">Total Order:</string>
    <string name="bill_pay_label">PAY</string>
    <string name="account_label">Your Account:</string>
    <string name="hamburger_label">Hamburger</string>
    <string name="hot_dog_label">Hot Dog</string>
    <string name="fries_label">Fries</string>
    <string name="drink_label">Drink</string>
    <string name="dessert_label">Dessert</string>
    <string name="bread_type">Bread type:</string>
    <string name="meat_type">Meat type:</string>
    <string name="onions_label">Onions</string>
    <string name="tomatoes_label">Tomatoes</string>
    <string name="cucumber_label">Cucumber</string>
    <string name="salad_label">Salad</string>
    <string name="confirm">Confirm</string>
    <string name="bread_crumbs_label">Breadcrumbs</string>
    <string name="mustard_label">Mustard</string>
    <string name="mayo_label">Mayonnaise</string>
    <string name="ketchup_label">Ketchup</string>
    <string name="small_fries">Small Fries</string>
    <string name="medium_fries">Medium Fries</string>
    <string name="large_fries">Large Fries</string>
    <string name="barbecue_sauce_label">Barbecue Sauce</string>
    <string name="drink_size">Drink Size:</string>
    <string name="drink_type">Drink Type:</string>
    <string name="nougat_label">Nougat</string>
    <string name="marshmellow_label">Marshmellow</string>
    <string name="lollipop_label">Lollipop</string>
    <string name="kit_kat_label">Kit-Kat</string>
    <string name="jelly_bean_label">Jelly Bean</string>
    <string name="ice_cream_sandwich_label">Ice Cream Sandwich</string>
    <string name="reset_label">RESET</string>
    <string name="reset_warning_text">To reset all values press the button above.</string>
    <string name="reset_OK_message">All application value have been reset</string>


    <string name="order_processing">Your order is being processed, it will be ready when the timer expires.\nYou can close the app.</string>
    <string name="order_deleted">Your order has been deleted.</string>
    <!-- Notification strings -->
    <string name="simple_notification_title_template">Dove sei finito?!</string>
    <string name="simple_notification_placeholder_text_template">
        Il cibo non va sprecato! …e poi ci devi dei soldi.
    </string>


    <string name="notification_order">Order </string>
    <string name="notification_order_preparation_title"> is in elaboration</string>
    <string name="notification_order_preparation_text">Your order is in elaboration</string>
    <string name="notification_order_done">Done!</string>
    <string name="notification_order_ready">Your order is ready:</string>
    <string name="notification_payment_failed_title">Payment failed!</string>
    <string name="notification_payment_failed_text">Your account value is too low.</string>
    <string name="notification_payment_success_title">Payment accepted</string>
    <string name="notification_payment_success_text">Thank you! Enjoy your meal!</string>


    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string name="show_order">Show order</string>
    <string name="confirm_order">CONFIRM</string>
    <string name="delete_order">DELETE</string>

</resources>
