<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center">

    <TextView
        android:id="@+id/textViewDessert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dessert_label"
        android:textSize="40dp"
        android:padding="10dp"/>


    <CheckBox
        android:id="@+id/checkboxIceCream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ice_cream_sandwich_label"
        android:textSize="30dp"
        android:padding="10dp"/>

    <CheckBox
        android:id="@+id/checkboxJallyBean"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/jelly_bean_label"
        android:textSize="30dp"
        android:padding="10dp"/>

    <CheckBox
        android:id="@+id/checkboxKitKat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kit_kat_label"
        android:textSize="30dp"
        android:padding="10dp"/>

    <CheckBox
        android:id="@+id/checkboxLollipop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lollipop_label"
        android:textSize="30dp"
        android:padding="10dp"/>

    <CheckBox
        android:id="@+id/checkboxMarshmellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/marshmellow_label"
        android:textSize="30dp"
        android:padding="10dp"/>

    <CheckBox
        android:id="@+id/checkboxNougat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nougat_label"
        android:textSize="30dp"
        android:padding="10dp"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/custom_hamburger_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="50sp"
            android:text="@string/starting_bill_dollars"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonConfirmDessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>