<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center">


    <TextView
        android:id="@+id/textViewHotDog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hot_dog_label"
        android:textSize="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:id="@+id/checkBoxBreadcrumbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/bread_crumbs_label"/>

        <CheckBox
            android:id="@+id/checkBoxHotdogOnions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/onions_label"/>

        <CheckBox
            android:id="@+id/checkBoxMustard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/mustard_label"/>

        <CheckBox
            android:id="@+id/checkBoxHotdogMayo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/mayo_label"/>

        <CheckBox
            android:id="@+id/checkBoxHotdogKetchup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/ketchup_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/custom_hamburger_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="50sp"
            android:text="@string/starting_bill_dollars"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonConfirmHotdog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>