<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/textViewHamburger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hamburger_label"
        android:textSize="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textViewBreadType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bread_type"
            android:textSize="20sp"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/bread_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textViewMeatType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/meat_type"
            android:textSize="20sp"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/meat_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:id="@+id/checkBoxSalad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/salad_label"/>

        <CheckBox
            android:id="@+id/checkBoxTomatoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/tomatoes_label"/>

        <CheckBox
            android:id="@+id/checkBoxHamburgerOnions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/onions_label"/>

        <CheckBox
            android:id="@+id/checkBoxCucumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/cucumber_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/custom_hamburger_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="50sp"
            android:text="@string/starting_bill_dollars"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonConfirmHamburger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>