<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esp1617.albertomoretto.foodify.FoodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="11dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linearLayout">

        <TextView
            android:id="@+id/hamburger_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hamburger_label"
            android:textSize="55sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/hot_dog_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hot_dog_label"
            android:textSize="55sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/fies_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fries_label"
            android:textSize="55sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/drink_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drink_label"
            android:textSize="55sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/dessert_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dessert_label"
            android:textSize="55sp"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="12dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/bill_label"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/order_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center|right"
                android:text="0.0$"
                android:textSize="64sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="right">

            <TextView
                android:id="@+id/account_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/account_label"
                android:textSize="24sp"
                android:layout_gravity="center|left"/>

            <TextView
                android:id="@+id/account_value_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="0.0$"
                android:textSize="64sp"
                android:gravity="center|right"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
