<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="10"
    tools:context="com.esp1617.albertomoretto.foodify.YourOrderActivity">

    <TextView
        android:id="@+id/order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bill_label"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:maxLines="22"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:scrollbars="vertical"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity = "center"
    android:orientation="horizontal">

    <Button
        android:id="@+id/confirm_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order"/>
    <Button
        android:id="@+id/delete_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_order"/>
</LinearLayout>

</LinearLayout>