<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkout_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="11"
    tools:context="com.esp1617.albertomoretto.foodify.CheckOutActivity">

    <TextView
        android:id="@+id/bill_account_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity = "left"
        android:text="@string/account_label"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/bill_items_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:maxLines="22"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:scrollbars="vertical"
        android:gravity = "center"
        android:text="TextView"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/bill_total_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity = "left"
        android:text="@string/bill_label"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/bill_pay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bill_pay_label"/>

</LinearLayout>
